--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "modules/redis"]
 	path = modules/redis
 	url = git@github.com:justinclayton/puppet-module-redis.git
+[submodule "modules/newrelic_plugins"]
+	path = modules/newrelic_plugins
+	url = https://github.com/newrelic-platform/newrelic_plugins_puppet
