--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "modules/redis"]
 	path = modules/redis
 	url = git@github.com:justinclayton/puppet-module-redis.git
+[submodule "modules/nrsysmond"]
+	path = modules/nrsysmond
+	url = https://github.com/newrelic/puppet-nrsysmond.git
